--- a/Business.html
+++ b/Business.html
@@ -7,7 +7,7 @@
      <h1 style="color:blue">Lash4Me</h1>
      <a href="https://www.instagram.com/lashesxmariee/">instagram page examples of lashes work</a> <br>
      <br>     
-     <img src="https://www.lasplashcosmetics.com/media/catalog/product/cache/13a096f6d47c29518b9415df620f4767/0/0/00372_eye_golddigger.jpg" alt="Eyelashes"width="300" height="250">
+     <img src="Eye lash image.jpeg" alt="Eyelashes"width="300" height="250">
   </head>
       
         <body style="background-color:powderblue">
